--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "php": ">=5.4"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "3.7.*",
-        "phpmd/phpmd" : "1.4.*",
+        "phpunit/PHPUnit": "4.*",
+        "phpmd/phpmd" : "*",
         "sebastian/phpcpd": "*",
         "phpdocumentor/phpdocumentor": "2.*",
         "squizlabs/php_codesniffer": "1.*",
